--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "supabase-types": "pnpm dlx supabase gen types typescript --project-id 'hefsnmjrpqyifswtltgu' > src/database.types.ts"
+    "supabase-types": "pnpm dlx supabase gen types typescript --project-id 'hefsnmjrpqyifswtltgu' > src/database.types.ts && pnpm run format"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@supabase/supabase-js": "^2.48.1",
-    "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query": "^5.64.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "motion": "^12.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
-    "tailwindcss": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -37,9 +43,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "supabase": "^2.6.8",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-motion": "^1.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
