Feat: Added intro and convo-starter page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,20 @@
 {
-  "cSpell.words": ["rizz", "supabase", "VITE"],
+  "cSpell.words": [
+    "Bebas",
+    "Convo",
+    "embla",
+    "Gigachad",
+    "gooning",
+    "Neue",
+    "rizz",
+    "rizziest",
+    "Rizzing",
+    "RIZZLER",
+    "Rizzly",
+    "supabase",
+    "sussiest",
+    "therizzbook",
+    "VITE"
+  ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
