--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "motion": "^12.0.5",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
+    "twemoji": "^14.0.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
