Feat: Removed posthog analytics

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "motion": "^12.0.5",
-    "posthog-js": "^1.211.0",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
@@ -63,5 +62,13 @@
     "vite": "^6.0.5",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-window": "^7.3.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild",
+      "sharp",
+      "supabase"
+    ]
   }
 }
