--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "eslint . && pnpm run format",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "generate-pwa-assets": "pwa-assets-generator",
-    "supabase-types": "pnpm dlx supabase gen types typescript --project-id 'hefsnmjrpqyifswtltgu' > src/database.types.ts && pnpm run format"
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
-    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,7 +51,6 @@
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "supabase": "^2.9.6",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-motion": "^1.0.1",
@@ -67,8 +64,7 @@
     "onlyBuiltDependencies": [
       "@swc/core",
       "esbuild",
-      "sharp",
-      "supabase"
+      "sharp"
     ]
   }
 }
